# ChangeLog for dev-ruby/datamapper
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*datamapper-1.2.0 (29 Oct 2013)

  29 Oct 2013; Peter Wilmott <p@p8952.info> +datamapper-1.2.0.ebuild,
  +metadata.xml:
  dev-ruby/datamapper: Initial commit, dependency for datamapper(dm)-1.2.x